# openplan

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SYSTEM_SPECIFICATION.md  opencode.json  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml
examples/pubwatch/: DIGEST_SYSTEM_TASK_BREAKDOWN.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  demo.py  design.md  opencode.json  papers.db  pipeline_result.md  proposal.md  requirements_specification.md  roadmap-001.yaml  roadmap.json  roadmap.yaml  run_pipeline.py  specs.md  summary.md  tasks.md  test_email_delivery.py  test_implementation.py  test_profile_versioning.py
examples/pubwatch/migrations/: 004_digest_preferences_schema.sql
examples/pubwatch/pubwatch/: __init__.py  __main__.py  auth.py  digest_service.py  fetcher.py  notification_service.py  storage.py
examples/pubwatch/specs/: api_specification.md  database_schema.md  digest_system_spec.md  digest_system_summary.md  (+2 more)
openplan/: __init__.py
openplan/cli/: __init__.py  main.py
openplan/core/: __init__.py  adr_generator.py  archive.py  campaign_generator.py  engine.py  gather.py  ordering.py  pipeline.py  schemas.py  stabilizer.py
openplan/integrations/: acp_client.py  openspec.py
openplan/prompts/: loader.py
openplan/storage/: __init__.py  repository.py
tests/: test_adr_generator.py  test_archive.py  test_campaign_generator.py  test_cli.py  test_engine.py  test_gather.py  test_integration.py  test_ordering.py  test_pipeline.py  test_prompts.py  test_repository.py  test_schemas.py  test_stabilizer.py
(+99 files in other folders)
